--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
 	"devDependencies": {
 		"webpack": "^4.39.0",
 		"webpack-cli": "^3.3.6"
+	},
+	"dependencies": {
+		"javascript-abstraction": "^1.0.0"
 	}
 }
