--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "mp4-file-parser",
-	"private": true,
+	"version": "1.0.0",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bloha/mp4-file-parser.git"
+	},
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "webpack --mode development",
